--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,3 +96,6 @@ init_forbid_extra = true
 init_typed = true
 warn_required_dynamic_aliases = true
 warn_untyped_fields = true
+
+[tool.coverage.run]
+omit = ["bibat/{{cookiecutter.repo_name}}/*"]
