--- a/bibat/examples/baseball/pyproject.toml
+++ b/bibat/examples/baseball/pyproject.toml
@@ -21,10 +21,7 @@ dependencies = [
     "pydantic",
     "scipy",
     "scikit-learn",
-    "toml",
-    
-    
-]
+    "toml",]
 
 [tool.setuptools]
 packages = ["baseball"]
