Save prepared data in a single file
This change saves each `PreparedData` object as a single json file,
avoiding the need for complicated saving and loading operations.

--- a/bibat/{{cookiecutter.repo_name}}/Makefile
+++ b/bibat/{{cookiecutter.repo_name}}/Makefile
@@ -43,7 +43,7 @@ $(ENV_MARKER): $(ACTIVATE_VENV) $(CMDSTAN)
 analysis: $(ENV_MARKER)
 	. $(ACTIVATE_VENV) && (\{%- if cookiecutter.create_tests_directory == 'y' %}
 	  python -m pytest || exit 1; \{%- endif %}
-	  python $(SRC)/prepare_data.py || exit 1; \
+	  python $(SRC)/data_preparation.py || exit 1; \
 	  python $(SRC)/sample.py || exit 1; \
 	  jupyter execute $(SRC)/investigate.ipynb || exit 1; \
 	)
