--- a/bibat/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/bibat/{{cookiecutter.repo_name}}/pyproject.toml
@@ -12,7 +12,7 @@ description = "{{cookiecutter.description}}"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "arviz@git+https://github.com/arviz-devs/arviz.git@main",
+    "arviz",
     "cmdstanpy",
     "jupyter",
     "numpy",
@@ -22,6 +22,7 @@ dependencies = [
     "pyspark",
     "scipy",
     "scikit-learn",
+    "stanio",
     "toml",
     {%- if cookiecutter.create_tests_directory == 'y' %}    "pytest",
     "black",{%- endif -%}
