--- a/bibat/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/bibat/{{cookiecutter.repo_name}}/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     {%- if cookiecutter.docs_format == 'Sphinx' %}
     "sphinx",
     {%- endif -%}
+    "zarr",
 ]
 
 [project.optional-dependencies]
