Debugging gh action

--- a/.github/workflows/draft-pdf.yml
+++ b/.github/workflows/draft-pdf.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           # To install LaTeX to build PDF book
           tinytex: true
-        run: |
-          quarto add  --no-prompt quarto-journals/acm
+
+      -  run: quarto add --no-prompt quarto-journals/acm
 
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
