Debugging gh action

--- a/.github/workflows/draft-pdf.yml
+++ b/.github/workflows/draft-pdf.yml
@@ -16,7 +16,10 @@ jobs:
           # To install LaTeX to build PDF book
           tinytex: true
 
-      -  run: quarto add --no-prompt quarto-journals/acm
+      - shell: bash
+        run: |
+          cd paper
+          quarto add --no-prompt quarto-journals/acm
 
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
