--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,16 @@
 [tox]
 env_list =
     format
-    flake8
+    ruff
     py3{9, 10, 11}
 minversion = 4.2.8
 
-[flake8]
-exclude = *.venv*, *.tox*, build/*, *cookiecutter.repo_name*
-max_line_length = 80
+[testenv:ruff]
+skip_install = True
+deps=
+    ruff
+commands=
+    ruff check {toxinidir}/bibat {toxinidir}/tests
 
 [testenv]
 description = run the tests with pytest
@@ -30,14 +33,5 @@ deps =
     isort
 skip_install = True
 commands =
-    black --check --diff .
-    isort --check-only --diff .
-
-[testenv:flake8]
-skip_install = True
-deps=
-    flake8
-    flake8-docstrings
-    flake8-bugbear
-commands=
-    flake8 .
+    black --check --diff {toxinidir}/bibat {toxinidir}/tests
+    isort --check-only --diff {toxinidir}/bibat {toxinidir}/tests
