--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,10 +6,10 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 -   repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: 24.1.1
     hooks:
     -   id: black
-        exclude: bibat/\{\{cookiecutter\.repo_name\}\}
+        language_version: python3.12
 -   repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
