--- a/.github/workflows/test_target_project_docs.yml
+++ b/.github/workflows/test_target_project_docs.yml
@@ -12,13 +12,13 @@ jobs:
     steps:
 
     - uses: actions/checkout@v2
-    - name: Set up Python 3.11
+    - name: Set up Python 3.12
       uses: actions/setup-python@v2
       with:
-        python-version: 3.11
+        python-version: 3.12
     - name: install bibat with development packages
       run: pip install -e .\[development\]
     - name: build docs with sphinx
       run: |
-        cd bibat/\{\{cookiecutter.repo_name\}\}
+        cd bibat/template
         sphinx-build docs ./docs/_build/html/
