--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 env_list =
     format
     ruff
-    py3{9, 10, 11}
+    py3{11,12}
 minversion = 4.2.8
 
 [testenv:ruff]
@@ -24,7 +24,7 @@ deps =
     pytest-sugar
 commands =
     pip install -e .'[development]'
-    pytest tests --cov=template --cov-report xml --cov-report term
+    pytest tests --cov bibat --cov-report xml --cov-report term
 
 [testenv:format]
 description = install black and isort and invoke them on the current folder
