--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ development = [
     "sphinx-click",
     "ruff",
     "furo",
+    "zarr",
 ]
 [project.urls]
 homepage = "https://github.com/teddygroves/bibat"
@@ -74,7 +75,7 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["INP001"]
 "bibat/template/tests/*" = ["INP001"]
-"bibat/template/src/*" = ["INP001"]
+"bibat/template/src/*" = ["INP001", "TID252"]
 
 
 [tool.isort]
