--- a/.github/workflows/run_tox.yml
+++ b/.github/workflows/run_tox.yml
@@ -23,6 +23,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[development]
+    - name: Install cmdstan
+      run: python -m cmdstanpy.install_cmdstan --version git:develop --cores 2
     - name: Run tox
       run: tox
     - name: Upload coverage reports to Codecov
