--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 env_list =
-    format
+    black
     ruff
     py3{11,12}
 minversion = 4.2.8
@@ -26,12 +26,10 @@ commands =
     pip install -e .'[development]'
     pytest tests --cov bibat --cov-report xml --cov-report term
 
-[testenv:format]
-description = install black and isort and invoke them on the current folder
+[testenv:black]
+description = install black and run on the current folder
 deps =
     black[jupyter]
-    isort
 skip_install = True
 commands =
     black --check --diff {toxinidir}/bibat {toxinidir}/tests
-    isort --check-only --diff {toxinidir}/bibat {toxinidir}/tests
