--- a/tox.ini
+++ b/tox.ini
@@ -18,12 +18,14 @@ skip_install = true
 package = wheel
 wheel_build_env = .pkg
 deps =
+    cmdstanpy
     pytest>=7
     codecov
     pytest-cov
     pytest-sugar
 commands =
     pip install -e .'[development]'
+    python -m cmdstanpy.install_cmdstan --cores 2
     pytest tests --cov bibat --cov-report xml --cov-report term
 
 [testenv:black]
