fix broken tox workflow

--- a/.github/workflows/run_tox.yml
+++ b/.github/workflows/run_tox.yml
@@ -19,6 +19,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.12
+    - name: Install bibat
+      run: pip install -e .'[development]'
     - name: Run tox
       run: tox
     - name: Upload coverage reports to Codecov
