Another attempt to fix tox on windows

--- a/tox.ini
+++ b/tox.ini
@@ -17,16 +17,18 @@ description = run the tests with pytest
 skip_install = true
 package = wheel
 wheel_build_env = .pkg
+passenv =
+    CMDSTAN
+    OS
 deps =
-    cmdstanpy
-    pytest>=7
     codecov
+    pytest>=7
     pytest-cov
     pytest-sugar
 commands =
-    pip install -e .'[development]'
+    pip install -e .[development]
     python -m cmdstanpy.install_cmdstan --cores 2
-    pytest tests --cov bibat --cov-report xml --cov-report term
+    python -m pytest tests --cov bibat --cov-report xml --cov-report term
 
 [testenv:black]
 description = install black and run on the current folder
