--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,7 @@
-# .readthedocs.yaml
-# Read the Docs configuration file
+# Read the Docs configuration file for MkDocs projects
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
 # Required
+
 version: 2
 
 # Set the version of Python and other tools you might need
@@ -11,20 +10,11 @@ build:
   tools:
     python: "3.12"
 
-# Build documentation in the docs/ directory with Sphinx
-sphinx:
-  configuration: docs/conf.py
-  fail_on_warning: true
+mkdocs:
+  configuration: mkdocs.yml
 
-# If using Sphinx, optionally build your docs in additional formats such as PDF
-# formats:
-#    - pdf
-
-# Optionally declare the Python requirements required to build your docs
 python:
-   install:
-    - method: pip
+  install:
       path: .
       extra_requirements:
         - development
-    - requirements: docs/requirements.txt
