--- a/.github/workflows/test_target_project_docs.yml
+++ b/.github/workflows/test_target_project_docs.yml
@@ -16,11 +16,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.12
-    - name: install bibat with development packages
-      run: pip install -e .\[development\]
     - name: Use bibat
       run: copier copy -l -d docs_format=Sphinx --vcs-ref ${{ github.sha }} gh:teddygroves/bibat my_cool_project
     - name: build docs with sphinx
       run: |
         cd my_cool_project
+        make env
         sphinx-build docs ./docs/_build/html/
