--- a/.github/workflows/test_target_project_docs.yml
+++ b/.github/workflows/test_target_project_docs.yml
@@ -23,5 +23,5 @@ jobs:
     - name: build docs with sphinx
       run: |
         cd my_cool_project
-        make env
+        pip install -e .[development]
         sphinx-build docs ./docs/_build/html/
