--- a/example_projects/baseball/inferences/gpareto2006/config.toml
+++ b/example_projects/baseball/inferences/gpareto2006/config.toml
@@ -1,6 +1,6 @@
 name = "gpareto2006"
 stan_file = "gpareto.stan"
-prepared_data_dir = "2006"
+prepared_data = "2006"
 stan_input_function = "get_stan_input_gpareto"
 modes = ["prior", "posterior"]
 
