--- a/example_projects/baseball/inferences/gparetobdb/config.toml
+++ b/example_projects/baseball/inferences/gparetobdb/config.toml
@@ -1,6 +1,6 @@
 name = "gparetobdb"
 stan_file = "gpareto.stan"
-prepared_data_dir = "bdb"
+prepared_data = "bdb"
 stan_input_function = "get_stan_input_gpareto"
 modes = ["prior", "posterior"]
 
@@ -17,5 +17,5 @@ iter_sampling = 2000
 
 [mode_options.prior]
 chains = 2
-iter_warmup = 2000
+iter_warmup = 1000
 iter_sampling = 1000
