--- a/example_projects/baseball/pyproject.toml
+++ b/example_projects/baseball/pyproject.toml
@@ -5,36 +5,33 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "baseball"
 authors = [
-    {name = "Teddy Groves", email = "author@email.com"},
+    {name = "Teddy Groves", email = "groves.teddy@gmail.com"},
 ]
 version = "0.0.1"
-description = "Comparison of distributions for modelling baseball hitting"
+description = "Is the generalised Pareto distribution good for modelling latent hitting ability?"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "arviz",
+    "bibat@git+https://github.com/teddygroves/bibat.git@copier",
     "cmdstanpy",
     "jupyter",
     "numpy",
     "pandas",
     "pandera >= 0.18.0",
     "pydantic >= 2.0.0",
-    "pyspark",
-    "scipy",
-    "scikit-learn",
-    "stanio",
-    "toml",
-    "zarr",
+    "toml","zarr",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest",
     "black",
+    "ruff",
 ]
 
 [tool.setuptools]
-packages = ["baseball"]
+packages = ["src"]
 
 [tool.black]
 line-length = 80
@@ -60,16 +57,17 @@ exclude = '''
 )
 '''
 
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-line_length = 80
-
 [tool.pylint.messages_control]
 disable = "C0330, C0326"
 
 [tool.pylint.format]
 max-line-length = "80"
+
+[tool.ruff]
+line-length = 80
+[tool.ruff.lint]
+select = ["ALL"]
+[tool.ruff.lint.isort]
+known-first-party = ["bibat", "src"]
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["INP001"]
