--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,10 +79,7 @@ ignore = [
 known-first-party = ["bibat", "src"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["INP001"]
-"bibat/template/tests/*" = ["INP001"]
-"bibat/template/src/*" = ["INP001"]
-
+"**/tests/*" = ["INP001"]
 
 [tool.pylint.messages_control]
 disable = "C0330, C0326"
