--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,3 +103,5 @@ warn_required_dynamic_aliases = true
 
 [tool.coverage.run]
 omit = ["bibat/template/*", "example_projects/*"]
+[tool.coverage.report]
+exclude_also = ["if TYPE_CHECKING:"]
