--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 ]
 license = {text = "GNU General Public License version 3"}
 description = "Batteries-included Bayesian analysis template"
-readme = "README.rst"
+readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "arviz",
