--- a/example_projects/baseball/pyproject.toml
+++ b/example_projects/baseball/pyproject.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "arviz",
-    "bibat@git+https://github.com/teddygroves/bibat.git@copier",
+    "bibat==0.3.0",
     "cmdstanpy",
     "jupyter",
     "numpy",
