--- a/copier.yml
+++ b/copier.yml
@@ -1,4 +1,9 @@
 _subdirectory: template
+_message_before_copy: |
+    Welcome to bibat, the batteries-included Bayesian analysis template!
+
+    You'll be asked a series of questions whose answers will be used to
+    generate a tailored project for you.
 project_name:
   type: str
   help: Name of your project
@@ -41,3 +46,18 @@ docs_format:
 create_dotgithub_directory:
   type: bool
   default: yes
+_message_after_copy: |
+    Your project "{{ project_name }}" has been created successfully!
+
+    Next steps:
+
+    1. Change directory to the project root:
+
+       $ cd {{ _copier_conf.dst_path }}
+
+    2. Run the example analysis:
+
+       $ make analysis
+
+    3. Edit the example analysis so that it implements your desired Bayesian workflow. If you'd like to read more about how to do this, check out this
+    documentation page: https://bibat.readthedocs.io/en/latest/working_with_bibat.html
