--- a/.github/workflows/count-lines-of-code.yml
+++ b/.github/workflows/count-lines-of-code.yml
@@ -1,10 +1,11 @@
 name: Count Lines of Code
 
-# Controls when the action will run. Triggers the workflow on push or pull request 
+# Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
 on:
   push:
     branches: [ main ]
+    tags-ignore: '**'
   pull_request:
     branches: [ main ]
 
