Use old pyyaml-include to avoid copier bug.
See <https://github.com/copier-org/copier/issues/1568>.

This should be fixed in a new version of copier in the next few days.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pandera",
     "pip >= 20",
     "pydantic",
+    "pyyaml-include<2",  # temporary fix: see https://github.com/copier-org/copier/issues/1568
     "scikit-learn",
     "stanio",
     "toml",
